align teaser items correctly

--- a/blocks/related-articles/related-articles.css
+++ b/blocks/related-articles/related-articles.css
@@ -2,7 +2,7 @@
 }
 
 .related-articles_header {
-   
+
 }
 
 .related-articles_wrapper {
@@ -10,7 +10,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin: 1em 0 1em 0;
 }
 
@@ -18,8 +18,9 @@
     margin: 5px 25px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    justify-items: center;
+    flex-basis: 300px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .related-articles_item-title {
